данные для подключение MySQL

--- a/.env
+++ b/.env
@@ -2,3 +2,11 @@ CONFIG__SECRET_KEY="django-insecure-1$683gm3_mxo1*gxc8l+@f95z@uagcgkse*h9-fi!5@f
 CONFIG__DEBUG=True
 
 CONFIG__ALLOWED_HOSTS="127.0.0.1"
+
+DB_NAME=run_tourist
+DB_USER=alex_run
+DB_PASS=h834wvtwer7r^&54w5dADW
+DB_HOST=localhost
+DB_PORT=3306
+DB_OPTIONS=utf8mb4
+DB_ATOMIC_REQUESTS=True
