--- a/.env-prod
+++ b/.env-prod
@@ -2,3 +2,11 @@ CONFIG__SECRET_KEY=""
 CONFIG__DEBUG=False
 
 CONFIG__ALLOWED_HOSTS=""
+
+DB_NAME=
+DB_USER=
+DB_PASS=
+DB_HOST=localhost
+DB_PORT=3306
+DB_OPTIONS=utf8mb4
+DB_ATOMIC_REQUESTS=True
