завершена настрока базы данных

--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ CONFIG__DEBUG=True
 
 CONFIG__ALLOWED_HOSTS="127.0.0.1"
 
-DB_NAME=run_tourist
-DB_USER=alex_run
-DB_PASS=h834wvtwer7r^&54w5dADW
-DB_HOST=localhost
-DB_PORT=3306
-DB_OPTIONS=utf8mb4
-DB_ATOMIC_REQUESTS=True
+CONFIG__DB_NAME=run_tourist
+CONFIG__DB_USER=alex_run
+CONFIG__DB_PASS=h834wvtwer7r^&54w5dADW
+CONFIG__DB_HOST=localhost
+CONFIG__DB_PORT=3306
+CONFIG__DB_OPTIONS=utf8mb4
+CONFIG__DB_ATOMIC_REQUESTS=True
