--- a/.env-prod
+++ b/.env-prod
@@ -3,10 +3,10 @@ CONFIG__DEBUG=False
 
 CONFIG__ALLOWED_HOSTS=""
 
-DB_NAME=
-DB_USER=
-DB_PASS=
-DB_HOST=localhost
-DB_PORT=3306
-DB_OPTIONS=utf8mb4
-DB_ATOMIC_REQUESTS=True
+CONFIG__DB_NAME=
+CONFIG__DB_USER=
+CONFIG__DB_PASS=
+CONFIG__DB_HOST=localhost
+CONFIG__DB_PORT=3306
+CONFIG__DB_OPTIONS=utf8mb4
+CONFIG__DB_ATOMIC_REQUESTS=True
