--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "django (>=5.2.1,<6.0.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
     "mysqlclient (>=2.2.7,<3.0.0)",
-    "pillow (>=11.2.1,<12.0.0)"
+    "pillow (>=11.2.1,<12.0.0)",
 ]
 
 
